# hierarchical-cognitive-stack

./: .gitignore  README.md  pyproject.toml
docs/: THEORY.md
examples/: demo.py
src/: __init__.py  dispatcher.py  instinctive.py  ltm.py  orchestrator.py  stm.py
tests/: test_integration.py
