[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hierarchical-cognitive-stack"
version = "0.1.0"
description = "4-Layer Hierarchical Memory Architecture for LLMs - MVP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alessio", email = "alemusica@github.com" }
]
keywords = [
    "llm",
    "memory",
    "hierarchical",
    "fingerprinting",
    "interpretability",
    "fractal",
    "shazam"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",

    # ML & Fingerprinting
    "scikit-learn>=1.3.0",
    "sktime>=0.30.0",  # MiniRocket

    # Storage
    "surrealdb>=0.3.0",

    # Async
    "asyncio-extras>=1.3.0",
    "aiohttp>=3.9.0",

    # Utils
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
]
full = [
    "torch>=2.0.0",
    "tigramite>=5.2.0",  # PCMCI causal discovery
    "networkx>=3.0",
    "tsfresh>=0.20.2",
]

[project.scripts]
hmem = "hierarchical_memory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hierarchical_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
